@@ -21,7 +21,8 @@ CVS HEAD:
    * Death Knight
    * Lord
    * Master Bowman
- * take advantage of libzipios++ if available, to read cfg files, maps, images, and sound effects from zip files
+ * take advantage of libzipios++ if available, to read cfg files, maps,
+	images, sound effects, and fonts from zip files
  * fixed missing Deathblade in multiplayer
  * downloaded campaigns no longer require a restart to be able to play them
  * multiplayer game settings (map name, gold per village, ...) are saved now
